--- a/sessionOne.ipynb
+++ b/sessionOne.ipynb
@@ -104,7 +104,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = float(input(\"Skriv inn a: \"))"
+    "a = float(input(\"Skriv inn a: \"))\n",
+    "## Fullfør programmet"
    ]
   },
   {
